--- a/index.qmd
+++ b/index.qmd
@@ -4,17 +4,4 @@
 \pagenumbering{roman}
 \thispagestyle{empty}
 ```
-This work is licensed under the Creative Commons ...
-
-This is a placeholder to remind me of including/modifying in the final version:
-
--   Cover
--   Front page (start counting pages in Roman numbers here but do not show them in this page)
--   [Licenses](https://creativecommons.org/licenses/#licenses) (will be this index.qmd if i can do cover and front page at once)
--   Agradecimentos
--   Dedicatória
--   Statement of integrity
--   Abstract in English with keywords
--   Abstract in Portuguese
-
-All before the table of contents.
+This work is licensed under the Creative Commons Attribution 4.0 International (CC BY 4.0). To view a copy of this license visit [https://creativecommons.org/licenses/by/4.0/](https://creativecommons.org/licenses/by/4.0/).
